src/objects/CRM_Request__c.object
<CustomObject>
    <description>To list Change/Deployment requests, related to the projects</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Deployment_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Deadline, Dependencey</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GSD_Case_Number__c</fullName>
        <label>GSD Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Minutes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Minutes</label>
        <referenceTo>PM_Meeting_Minutes__c</referenceTo>
        <relationshipName>Deployment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RCO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RCO</label>
        <referenceTo>RCO_Information__c</referenceTo>
        <relationshipLabel>CRM Requests</relationshipLabel>
        <relationshipName>CRM_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <label>Request Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Function/Project related</fullName>
                </value>
                <value>
                    <fullName>Improvement / Bug</fullName>
                </value>
                <value>
                    <fullName>Deployment Request</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>ETM/Access Request</fullName>
                </value>
                <value>
                    <fullName>New APEX / Integration Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBU_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SBU</label>
        <referenceTo>SBU_Information__c</referenceTo>
        <relationshipLabel>CRM Requests</relationshipLabel>
        <relationshipName>CRM_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent Case Request</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CRM Request</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRM Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>